# stdpar-mandelbrot

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main_long.cpp  shim.h
